# test_code

./: .gitignore
C++/examples/TransGANpp/: CMakeLists.txt  main.cpp
C/C语言实例1/C语言实例1/: C语言实例1.c
C/C语言实例2/C语言实例2/: C语言实例2.c
C/password/password/: password.c
C/三子棋/三子棋/: game.h
C/函数递归求n的阶乘/函数递归求n的阶乘/: 函数递归求n的阶乘.c
C/函数递归求字符串长度/函数递归求字符串长度/: 函数递归求字符串长度.c
C/函数递归求第n个斐波那契数/函数递归求第n个斐波那契数/: 函数递归求第n个斐波那契数.c
C/判断机器字节序/判断机器字节序/: 判断机器字节序.c
C/判断闰年/判断闰年/: 判断闰年.c
C/字符串左旋/字符串左旋/: 字符串左旋.c
C/找出数组中两个只出现一次的数字/找出数组中两个只出现一次的数字/: 找出数组中两个只出现一次的数字.c
C/最大公约数/最大公约数/: 最大公约数.c
C/有序序列插入一个数/有序序列插入一个数/: 有序序列插入一个数.c
C/模拟实现atoi函数/模拟实现atoi函数/: 模拟实现atoi函数.c
C/猜凶手/猜凶手/: 猜凶手.c
C/猜名次/猜名次/: 猜名次.c
C/用函数判断素数/用函数判断素数/: 用函数判断素数.c
C/用宏将一个二进制数的奇数位和偶数位互换/用宏将一个二进制数的奇数位和偶数位互换/: 用宏将一个二进制数的奇数位和偶数位互换.c
C/计算二进制补码中1的个数/计算二进制补码中1的个数/: 计算二进制补码中1的个数.c
C/调整数组使奇数全在偶数前/调整数组使奇数全在偶数前/: 调整数组使奇数全在偶数前.c
C/辗转相除法求最大公约数/辗转相除法求最大公约数/: 辗转相除法求最大公约数.c
Java/examples/Building-Structure-Management/: README.md  pom.xml
Java/examples/demo-springboot/: pom.xml
Java/examples/demo-swt/: pom.xml
Java/examples/demo-vue/: README.md  package-lock.json  package.json
Java/examples/demo-web/: .gitignore  pom.xml
Python/examples/Dataset/: test.py  test_dataset.py  test_tensorboard.py
Python/examples/TorchUsageExample/: .gitignore  pyproject.toml  test_dataloader.py  test_dataset_transform.py  test_nn_MaxPool2d.py  test_nn_convoluntion2d.py  test_nn_convolution.py  test_nn_linear.py  test_nn_non_linear_activations.py  test_nn_sequential.py
Python/examples/hymenopteraDataUsage/: test_Dataset.py  test_transforms.py
Python/workspace/Precipitation-Nowcasting/: demo.py  pyproject.toml  test.py
Python/workspace/Precipitation-Nowcasting/experiments/: benchmark.py  rover_and_last_frame.py
Python/workspace/Precipitation-Nowcasting/experiments/VarFlow/: VarFlow.h  c_api.cpp  example.cpp
Python/workspace/Precipitation-Nowcasting/experiments/trajGRU_CrossEntropy/: main.py
Python/workspace/Precipitation-Nowcasting/experiments/trajGRU_frame_weighted_mse/: main.py
Python/workspace/Precipitation-Nowcasting/nowcasting/: config.py  train_and_test.py
Python/workspace/Precipitation-Nowcasting/nowcasting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Python/workspace/Precipitation-Nowcasting/nowcasting/hko/: dataloader.py  evaluation.py  mask.py  numba_accelerated.py
Python/workspace/Precipitation-Nowcasting/nowcasting/models/: trajGRU.py
eclipse-workspace/.metadata/: version.ini
eclipse-workspace/SWT/: .classpath
eclipse-workspace/Servers/Tomcat v9.0 Server at localhost-config/: server.xml
test/demo-qt/: CMakeLists.txt
test/demo-qt/demo-qt/: CMakeLists.txt  DemoQt.cpp  DemoQt.h  DemoQt.qrc  DemoQt.ui  main.cpp
test/demo-qt/demo-qt/include/: demo-qt.h
test/demo-qt/demo-qt/src/: demo-qt.cpp
test/demo-qt/demo-qt/ui/main-window/: MainWindow.cpp  MainWindow.h  MainWindow.ui
test/demo-qt/demo-qt/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
test/demo-qt/demo-qt/x64/Debug/qt/moc/: moc_DemoQt.cpp
test/demo-qt/demo-qt/x64/Debug/qt/qmake/: .qmake.stash  qml.qrc  qtvars.pro  qtvars.xml
test/demo-qt/demo-qt/x64/Debug/qt/rcc/: qrc_DemoQt.cpp
test/demo-qt/demo-qt/x64/Debug/qt/uic/: ui_DemoQt.h
test/demo-qt/src/: main.cpp
test/demo-qt/ui/: demo_qt.cpp  demo_qt.h  demo_qt.ui
test/test/test/: Demo.cpp  test.h
test/testC#/testC#/: Program.cs
test/testC#VS/testC#VS/: Program.cs  testC#VS.csproj
test/testC++/: .gitignore  CMakeLists.txt  main.cpp
test/testC++/include/: header.h  my_utils.h
test/testC++/src/: main.cpp
test/testC++/test/: Demo.cpp  test.cpp  test.h
test/testC++/testC++/: HanoiTower.cpp  HanoiTower.h  HeaderUnits.h  employee.ixx  main.cpp  out.txt  record.txt
test/testC++/testC++/x64/Debug/: CodeAnalysisResultManifest.txt  Database.cpp.ifc  Database.cpp.ifc.d.json  Database.cpp.ifc.dt.d.json  Database.cpp.ifc.dt.module.json  Database.cpp.ifc.dt.module.json.command  Database.cpp.ifcast  Database.cpp.nativecodeanalysis.sarif  Database.cppm.ifc  Database.cppm.ifc.d.json  Database.cppm.ifc.dt  Database.cppm.ifc.dt.command  Database.cppm.ifc.dt.d.json  Database.cppm.ifc.dt.module.json  Database.cppm.ifc.dt.module.json.command  Database.cppm.ifc.isense.dt  Database.cppm.ifc.isense.dt.command  Database.cppm.ifc.isense.dt.d.json  Database.cppm.ifcast  Database.cppm.nativecodeanalysis.sarif  Database.h.ifc.dt.d.json  Database.h.ifc.dt.module.json  Database.h.ifc.dt.module.json.command  DatabaseTest.cpp.ifc.d.json  DatabaseTest.cpp.ifc.dt.d.json  DatabaseTest.cpp.ifc.dt.module.json  DatabaseTest.cpp.ifc.dt.module.json.command  DatabaseUserInterface.cpp.ifc.d.json  DatabaseUserInterface.cpp.ifc.dt.d.json  DatabaseUserInterface.cpp.ifc.dt.module.json  DatabaseUserInterface.cpp.ifc.dt.module.json.command  DatabaseUserInterface.cpp.nativecodeanalysis.sarif  Employee.cpp.ifc  Employee.cpp.ifc.d.json  Employee.cpp.ifc.dt.d.json  Employee.cpp.ifc.dt.module.json  Employee.cpp.ifc.dt.module.json.command  Employee.cpp.ifcast  Employee.cpp.nativecodeanalysis.sarif  Employee.cppm.ifc.dt  (+418 more)
test/testC++/testC++/x64/Debug/microsoft/STL/: std.compat.ixx.ifc  std.compat.ixx.ifc.d.json  std.compat.ixx.ifc.dt.module.json.command  std.compat.ixx.ifcast  std.compat.ixx.module.json  std.compat.ixx.nativecodeanalysis.sarif  std.ixx.ifc.dt.command  std.ixx.ifc.dt.module.json.command  std.ixx.ifc.isense.dt.command  std.ixx.module.json  std.ixx.nativecodeanalysis.sarif
test/testC++VS/testC++VS/: common.ixx  (+4 more)
test/testC++VSCMake/: CMakeLists.txt
test/testC++VSCMake/testC++VSCMake/: CMakeLists.txt  testC++VSCMake.cpp  testC++VSCMake.h
test/testCUDA/: CMakeLists.txt
test/testCUDA/include/: header.h  my_utils.h
test/testCUDA/include/cuda/: CudaArray.cuh
test/testCUDA/include/cuda_helper/: helper_cuda.h
test/testCUDA/src/: main.cu
test/testJava/: .gitignore  pom.xml
test/testPython/: pyproject.toml  test.py
test/testQt/: .gitignore  CMakeLists.txt
test/testWeb/: testJS.js
test/test_vue/: package-lock.json  package.json  vite.config.js
(+571 files in other folders)
