[project]
name = "precipitation-nowcasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "moviepy==1.0.3",
    "numba>=0.61.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "tensorboardx>=2.6.2.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
